--- a/BlazorApp1/Pages/ClockSVG.cshtml
+++ b/BlazorApp1/Pages/ClockSVG.cshtml
@@ -1,5 +1,4 @@
-﻿@page "/PaintPage"
-
+﻿@page "/clocksvg"
 @using Microsoft.AspNetCore.Blazor.Services
 @inject IUriHelper uriHelper
 
@@ -16,7 +15,7 @@ protected override void OnInit()
 {
 
 
-    uriHelper.NavigateTo("https://lupblazorpaint.z20.web.core.windows.net/");
+    uriHelper.NavigateTo("https://lupblazorclocksvg.z20.web.core.windows.net/");
     base.OnInit();
 }
 }
