--- a/BlazorApp1/Pages/PasswordPatternPage.cshtml
+++ b/BlazorApp1/Pages/PasswordPatternPage.cshtml
@@ -1,107 +1,23 @@
-﻿@addTagHelper *, BlazorPasswordPatternComponent
-@using BlazorPasswordPatternComponent;
-@page "/PasswordPatternPage"
-
-<h3 style="color:darkred">This is blazor password pattern</h3>
-<br />
-
-<h5>You can click or type numbers.</h5>
+﻿@page "/PasswordPatternPage"
 
 
+@using Microsoft.AspNetCore.Blazor.Services
+@inject IUriHelper uriHelper
 
 
 <br />
+<h3>Redirecting</h3>
+<br />
 
-
-
-<div>
-    <CompBlazorPassword ref="CompBlazorPassword1" CompWidth="360" CompHeight="360"></CompBlazorPassword>
-
-    <br />
-    <br />
-
-    <button class="btn btn-primary" onclick="@Reset">Reset</button>
-</div>
 
 
 @functions
 {
-CompBlazorPassword CompBlazorPassword1 = new CompBlazorPassword();
-
-string Password = string.Empty;
-
-
-protected override void OnAfterRender()
-{
-    CompBlazorPassword1.PasswordUpdated = PassswordUpdated;
-
-}
-
-
-void Reset()
-{
-    CompBlazorPassword1.Reset();
-
-}
-
-
-void PassswordUpdated()
-{
-    Password = CompBlazorPassword1.Password;
-    StateHasChanged();
-
-}
-
-public void Cmd_KeyUp(UIKeyboardEventArgs e)
+protected override void OnInit()
 {
 
-    Console.WriteLine(e.Key);
 
-
-    switch (e.Key)
-    {
-        case "0":
-            CompBlazorPassword1.Reset();
-            break;
-        case "7":
-            CompBlazorPassword1.Clicked("00");
-            break;
-        case "8":
-            CompBlazorPassword1.Clicked("10");
-            break;
-        case "9":
-            CompBlazorPassword1.Clicked("20");
-            break;
-        case "4":
-            CompBlazorPassword1.Clicked("01");
-            break;
-        case "5":
-            CompBlazorPassword1.Clicked("11");
-            break;
-        case "6":
-            CompBlazorPassword1.Clicked("21");
-            break;
-        case "1":
-            CompBlazorPassword1.Clicked("02");
-            break;
-        case "2":
-            CompBlazorPassword1.Clicked("12");
-            break;
-        case "3":
-            CompBlazorPassword1.Clicked("22");
-            break;
-        case "Escape":
-            CompBlazorPassword1.Reset();
-            break;
-        case "Backspace":
-            CompBlazorPassword1.UnselectLast();
-            break;
-
-        default:
-            break;
-    }
-
-
-
+    uriHelper.NavigateTo("https://lupblazorpasswordpattern.z20.web.core.windows.net/");
+    base.OnInit();
 }
 }
