--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -9,11 +9,16 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
+                <span class="oi oi-plus" aria-hidden="true"></span> Home
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="https://lupblazorclocksvg.z20.web.core.windows.net/" Match=NavLinkMatch.All>
                 <span class="oi oi-plus" aria-hidden="true"></span> Clock SVG
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ClockCanvas">
+            <NavLink class="nav-link" href="https://lupblazorclockcanvas.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Clock Canvas
             </NavLink>
         </li>
@@ -23,17 +28,17 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="GameSnakePage">
+            <NavLink class="nav-link" href="https://lupblazorsnake.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Game Snake
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="PaintPage">
+            <NavLink class="nav-link" href="https://lupblazorpaint.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Paint
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="DoughnutChartpage">
+            <NavLink class="nav-link" href="https://lupblazordoughnutchart.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Doughnut Chart
             </NavLink>
         </li>
@@ -43,7 +48,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="LoanCalculatorPage">
+            <NavLink class="nav-link" href="https://lupblazorloancalculator.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Loan Calculator
             </NavLink>
         </li>
@@ -53,7 +58,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="PasswordPatternPage">
+            <NavLink class="nav-link" href="https://lupblazorpasswordpattern.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Password Pattern
             </NavLink>
         </li>
@@ -88,7 +93,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="PerformanceChartPage">
+            <NavLink class="nav-link" href="https://lupblazorperfchart.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Performance Chart
             </NavLink>
         </li>
@@ -98,7 +103,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="RawHTML">
+            <NavLink class="nav-link" href="https://lupblazorrawhtml.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
             </NavLink>
         </li>
@@ -107,16 +112,6 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Donation
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="Counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Updates history
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Todo list
-            </NavLink>
-        </li>*@
     </ul>
 </div>
 
