--- a/BlazorApp1/Pages/ClockSVG.cshtml
+++ b/BlazorApp1/Pages/ClockSVG.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/clocksvg"
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
