--- a/BlazorApp1/Pages/LoanCalculatorPage.cshtml
+++ b/BlazorApp1/Pages/LoanCalculatorPage.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/LoanCalculatorPage"
 
 
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
