--- a/BlazorApp1/Pages/PerformanceChartPage.cshtml
+++ b/BlazorApp1/Pages/PerformanceChartPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/PerformanceChartPage"
 
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
