--- a/BlazorApp1/Pages/RawHTML.cshtml
+++ b/BlazorApp1/Pages/RawHTML.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/rawhtml"
 
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
