--- a/BlazorApp1/Pages/SwwWsPage.cshtml
+++ b/BlazorApp1/Pages/SwwWsPage.cshtml
@@ -2,13 +2,12 @@
 
 
 @inherits SwwWsPage_Logic
-@*@implements IDisposable*@
+
 
 
 @addTagHelper *, BlazorWebWorkerHelper
 @using BlazorWebWorkerHelper;
 @using BlazorWebWorkerHelper.classes;
-
 
 
 <h3 style="color:darkred">This is Shared Web Worker sample with Web Socket inside</h3>
@@ -60,18 +59,40 @@
 <br />
 
 
+<table class="table">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>GUID</th>
+            <th>ClientID</th>
+            <th>Caption</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in log_list)
+        {
+            <tr>
+                <td>@item.Date.ToShortDateString()</td>
+                <td>@item.GUID</td>
+                <td>@item.ClientID</td>
+                <td>@item.Caption</td>
+            </tr>
+        }
+    </tbody>
+</table>
 
 
-<KendoGrid Data=@log_list Pageable=true PageSize=10 Sortable=true>
+
+@*<KendoGrid Data=@log_list Pageable=true PageSize=10 Sortable=true>
     <KendoGridColumn Field=@nameof(SwwWs_Item.Date)>
         <Template>
-            @($"{(context as SwwWs_Item).Date:HH:mm:ss.fff}")
+            @($"{(Context as SwwWs_Item).Date:HH:mm:ss.fff}")
         </Template>
     </KendoGridColumn>
     <KendoGridColumn Field=@nameof(SwwWs_Item.GUID) />
     <KendoGridColumn Field=@nameof(SwwWs_Item.ClientID) />
     <KendoGridColumn Field=@nameof(SwwWs_Item.Caption) />
 
-</KendoGrid>
+</KendoGrid>*@
 
 
