--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -1,9 +1,9 @@
-﻿@*<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Blazor clock component</a>
+﻿<div class="top-row pl-4 navbar navbar-dark">
+    <a class="navbar-brand" href="">Blazor demos</a>
     <button class="navbar-toggler" onclick=@ToggleNavMenu>
         <span class="navbar-toggler-icon"></span>
     </button>
-</div>*@
+</div>
 
 <div class=@(collapseNavMenu ? "collapse" : null) onclick=@ToggleNavMenu>
     <ul class="nav flex-column">
@@ -53,7 +53,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="SpreadsheetPage">
+            <NavLink class="nav-link" href="https://lupblazorspreadsheet.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Spreadsheet
             </NavLink>
         </li>
@@ -63,7 +63,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="TreeViewPage">
+            <NavLink class="nav-link" href="https://lupblazortreevisualizer.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Tree View
             </NavLink>
         </li>
@@ -98,7 +98,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="VirtualizedListPage">
+            <NavLink class="nav-link" href="https://lupblazorvirtuiallist.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Virtualized List
             </NavLink>
         </li>
