--- a/BlazorApp1/_ViewImports.cshtml
+++ b/BlazorApp1/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Blazor.Layouts
-@using Microsoft.AspNetCore.Blazor.Routing
+@using Microsoft.AspNetCore.Components.Layouts
+@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
 @using BlazorApp1
 @using BlazorApp1.Shared
@@ -13,5 +13,5 @@
 @using BlazorWebWorkerHelper.WsClasses
 
 
-@using Kendo.Blazor
-@addTagHelper *,Kendo.Blazor
+@*@using Kendo.Blazor
+@addTagHelper *,Kendo.Blazor*@
