--- a/BlazorApp1/Pages/ChessPage.cshtml
+++ b/BlazorApp1/Pages/ChessPage.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/ChessPage"
 
 
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
