--- a/BlazorApp1/Pages/ClockCanvas.cshtml
+++ b/BlazorApp1/Pages/ClockCanvas.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/ClockCanvas"
 
 
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
