--- a/BlazorApp1/Pages/DoughnutChartPage.cshtml
+++ b/BlazorApp1/Pages/DoughnutChartPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/DoughnutChartPage"
 
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
