--- a/BlazorApp1/Pages/GameSnakePage.cshtml
+++ b/BlazorApp1/Pages/GameSnakePage.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/GameSnakePage"
 
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Services
 @inject IUriHelper uriHelper
 
 
