--- a/BlazorApp1/Pages/SwwWsPage2.cshtml
+++ b/BlazorApp1/Pages/SwwWsPage2.cshtml
@@ -9,8 +9,6 @@
 @using BlazorSharedWebWorkerWebSocketHelper;
 
 
-
-
 <h3 style="color:darkred">This is Shared Web Worker sample 2 with Web Socket inside</h3>
 <br />
 
@@ -53,15 +51,36 @@
 
 
 
-<KendoGrid Data=@log_list Pageable=true PageSize=10 Sortable=true>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>GUID</th>
+            <th>Caption</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in log_list)
+        {
+            <tr>
+                <td>@item.Date.ToShortDateString()</td>
+                <td>@item.GUID</td>
+                <td>@item.Caption</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+
+@*<KendoGrid Data=@log_list Pageable=true PageSize=10 Sortable=true>
     <KendoGridColumn Field=@nameof(SwwWs2_Item.Date)>
         <Template>
-            @($"{(context as SwwWs2_Item).Date:HH:mm:ss.fff}")
+            @($"{(Context as SwwWs2_Item).Date:HH:mm:ss.fff}")
         </Template>
     </KendoGridColumn>
     <KendoGridColumn Field=@nameof(SwwWs2_Item.GUID) />
     <KendoGridColumn Field=@nameof(SwwWs2_Item.Caption) />
 
-</KendoGrid>
+</KendoGrid>*@
 
 
