--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -98,13 +98,28 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorvirtuiallist.z20.web.core.windows.net/">
-                <span class="oi oi-plus" aria-hidden="true"></span> Virtualized List
+            <NavLink class="nav-link" href="https://lupblazorvirtualgrid.z13.web.core.windows.net/">
+                <span class="oi oi-plus" aria-hidden="true"></span> Virtual Grid
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="https://lupblazorscrollbar.z20.web.core.windows.net/">
+                <span class="oi oi-plus" aria-hidden="true"></span> Scrollbar
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="https://lupblazorsplitter.z20.web.core.windows.net/">
+                <span class="oi oi-plus" aria-hidden="true"></span> Splitter
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="https://lupblazorrawhtml.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="HireMePage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Hire me
             </NavLink>
         </li>
         <li class="nav-item px-3">
