--- a/LupusaBlazorDemos/Pages/DedicatedWebWorkerPage.razor
+++ b/LupusaBlazorDemos/Pages/DedicatedWebWorkerPage.razor
@@ -14,7 +14,7 @@
     <button class="btn btn-primary" style="width:120px;margin:5px" @onclick="@WwCreate">@Ww_Button</button>
 
     <span style="margin:5px">URL</span>
-    <input bind="@Ww_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
+    <input @bind="@Ww_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
 
 
     <span style="width:120px;margin:5px">status:@Ww_Status</span>
@@ -39,7 +39,7 @@
 
 </div>
 <div style="margin:5px">
-    <input style="margin:5px;width:250px" bind="@Ww_Message" />
+    <input style="margin:5px;width:250px" @bind="@Ww_Message" />
 
 
 
