--- a/LupusaBlazorDemos/Pages/SWWPage2.razor
+++ b/LupusaBlazorDemos/Pages/SWWPage2.razor
@@ -13,7 +13,7 @@
     <button class="btn btn-primary" style="width:120px;margin:5px" @onclick="@WwCreate">@Ww_Button</button>
 
     <span style="margin:5px">URL</span>
-    <input bind="@Ww_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
+    <input @bind="@Ww_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
 
 
     <span style="width:120px;margin:5px">status:@Ww_Status</span>
@@ -36,7 +36,7 @@
 
 </div>
 <div style="margin:5px">
-    <input style="margin:5px;width:500px" bind="@Ww_Message" disabled="@IsDisabled" />
+    <input style="margin:5px;width:500px" @bind="@Ww_Message" disabled="@IsDisabled" />
     <button class="btn btn-primary" style="margin:5px" @onclick="@WwSendMessage" disabled="@IsDisabled">Send</button>
 
 </div>
