--- a/LupusaBlazorDemos/Pages/SharedWebWorkerPage.razor
+++ b/LupusaBlazorDemos/Pages/SharedWebWorkerPage.razor
@@ -14,7 +14,7 @@
     <button class="btn btn-primary" style="width:120px;margin:5px" @onclick="@WwCreate">@Ww_Button</button>
 
     <span style="margin:5px">URL</span>
-    <input bind="@Ww_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
+    <input @bind="@Ww_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
 
 
     <span style="width:120px;margin:5px">status:@Ww_Status</span>
@@ -42,7 +42,7 @@
 
 </div>
 <div style="margin:5px">
-    <input style="margin:5px;width:500px" bind="@Ww_Message" disabled />
+    <input style="margin:5px;width:500px" @bind="@Ww_Message" disabled />
     <button class="btn btn-primary" style="margin:5px" @onclick="@GenerateNew">Generate New User</button>
     <button class="btn btn-primary" style="margin:5px" @onclick="@WwSendMessage" disabled="@IsDisabled">Register</button>
 
