--- a/LupusaBlazorDemos/Pages/WebSocketPage.razor
+++ b/LupusaBlazorDemos/Pages/WebSocketPage.razor
@@ -12,7 +12,7 @@
    
     <button class="btn btn-primary" style="width:120px;margin:5px" @onclick="@WsConnect">@Ws_Button</button>
     <span style="margin:5px">URL</span>
-    <input bind="@Ws_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
+    <input @bind="@Ws_URL" style="margin:5px;width:250px" disabled="@(!IsDisabled)" />
     <span style="width:120px;margin:5px">status:@Ws_Status</span>
 </div>
 
@@ -24,7 +24,7 @@
 
 </div>
 <div style="margin:5px">
-    <input style="margin:5px;width:250px" bind="@Ws_Message" disabled="@IsDisabled" />
+    <input style="margin:5px;width:250px" @bind="@Ws_Message" disabled="@IsDisabled" />
     <button class="btn btn-primary" style="margin:5px" @onclick="@WsSendMessage" disabled="@IsDisabled">Send</button>
     <button class="btn btn-primary" style="margin:5px" @onclick="@ClearLog">Clear log</button>
 
