--- a/LupusaBlazorDemos/Shared/MainLayout.razor
+++ b/LupusaBlazorDemos/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 <div class="main">
     <div class="top-row px-4">
         <a href="https://github.com/Lupusa87" target="_blank" class="ml-md-auto">Github</a>
-        <a href="https://www.nuget.org/packages?q=lupusa87" target="_blank" class="ml-md-auto">Nuget</a>
+        <a href="https://www.nuget.org/profiles/Lupusa87" target="_blank" class="ml-md-auto">Nuget</a>
         <a href="https://www.youtube.com/playlist?list=PLgZE0RHqetzssd-y1d0jcOwbSPjq2qWPI" target="_blank" class="ml-md-auto">Youtube Channel</a>
         <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank" class="ml-md-auto">Contact</a>
         <a href="https://lupblazordemos.z13.web.core.windows.net/HireMePage" target="_blank" class="ml-md-auto">Hire me</a>
