--- a/LupusaBlazorDemos/Pages/HireMePage.razor
+++ b/LupusaBlazorDemos/Pages/HireMePage.razor
@@ -1,8 +1,13 @@
 ﻿@page "/HireMePage"
 
 <br />
-<h1>I am open to new opportunities</h1>
+<h2>I am open to new opportunities</h2>
 
+
+<br />
+
+<br />
+<h4>please email me to discuss your business <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank" class="ml-md-auto">VakhtangiAbashidze@gmail.com</a></h4>
 <br />
 
 <br />
