--- a/LupusaBlazorDemos/Shared/NavMenu.razor
+++ b/LupusaBlazorDemos/Shared/NavMenu.razor
@@ -123,6 +123,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="https://lupblazorsdataexchange.z20.web.core.windows.net/">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fast JSInterop + LoadFile
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="https://lupblazorrawhtml.z20.web.core.windows.net/">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Raw HTML
             </NavLink>
