--- a/LupusaBlazorDemos/_Imports.razor
+++ b/LupusaBlazorDemos/_Imports.razor
@@ -7,7 +7,7 @@
 @using LupusaBlazorDemos.Shared
 @using LupusaBlazorDemos.Components
 @using System.Text
-
+@using BlazorCounterHelper
 @using BlazorWindowHelper
 @using System.Reflection;
 
