--- a/LupusaBlazorDemos/Shared/MainLayout.razor
+++ b/LupusaBlazorDemos/Shared/MainLayout.razor
@@ -6,13 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://github.com/Lupusa87" target="_blank" class="ml-md-auto">Github</a>
-        <a href="https://www.nuget.org/profiles/Lupusa87" target="_blank" class="ml-md-auto">Nuget</a>
-        <a href="https://www.youtube.com/playlist?list=PLgZE0RHqetzssd-y1d0jcOwbSPjq2qWPI" target="_blank" class="ml-md-auto">Youtube Channel</a>
-        <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank" class="ml-md-auto">Contact</a>
-        <a href="/HireMePage" class="ml-md-auto">Hire me</a>
-        <a href="/DonationPage" class="ml-md-auto">Donation</a>
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <HeaderLinks RepoName="LupusaBlazorDemos"></HeaderLinks>
     </div>
 
     <div class="content px-4">
