--- a/LupusaBlazorDemos/Shared/NavMenu.razor
+++ b/LupusaBlazorDemos/Shared/NavMenu.razor
@@ -13,17 +13,17 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorclocksvg.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="pageclocksvg">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Clock SVG
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorclockcanvas.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="pageclockcanvas">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Clock Canvas
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorchess.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageGameChess">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Game Chess
             </NavLink>
         </li>
