--- a/LupusaBlazorDemos/_Imports.razor
+++ b/LupusaBlazorDemos/_Imports.razor
@@ -18,3 +18,8 @@
 @using BlazorWebWorkerHelper;
 @using BlazorWebWorkerHelper.classes;
 @using static BlazorWebSocketHelper.Classes.BwsEnums;
+
+
+@using BlazorClockSvgComponent
+@using BlazorClockCanvasComponent
+@using BlazorChessComponent
