--- a/LupusaBlazorDemos/Shared/NavMenu.razor
+++ b/LupusaBlazorDemos/Shared/NavMenu.razor
@@ -28,12 +28,12 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorsnake.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageGameSnake">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Game Snake
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorpaint.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PagePaint">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Paint
             </NavLink>
         </li>
@@ -43,7 +43,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorcalculator.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageCalculator">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Calculator
             </NavLink>
         </li>
@@ -123,8 +123,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorsdataexchange.z20.web.core.windows.net/">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fast JSInterop + LoadFile
+            <NavLink class="nav-link" href="PageFastInterop">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fast JSInterop
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PageLoadFile">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> LoadFile
             </NavLink>
         </li>
     </ul>
