--- a/LupusaBlazorDemos/_Imports.razor
+++ b/LupusaBlazorDemos/_Imports.razor
@@ -23,3 +23,6 @@
 @using BlazorClockSvgComponent
 @using BlazorClockCanvasComponent
 @using BlazorChessComponent
+@using BlazorGameSnakeComponent
+@using BlazorCalculatorComponent
+@using BlazorPaintComponent
